--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "@vue/cli-plugin-typescript": "~5.0.0-rc.2",
     "@vue/cli-service": "~5.0.0-rc.2",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "lint-staged": "^11.1.2",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
     "sass": "^1.38.0",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.0.15",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vuetify-loader": "^2.0.0-alpha.0"
