[ci] set deploy trigger to main branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy
 on:
   push:
-    tags:
-      - '*'       
+    branches:
+      - main
+      
 jobs:
   deploy_web_app:
     runs-on: ubuntu-latest
