--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: '17.0.1'
 
     - name: Install Agular
-      run: npm install -g @vue/cli@5.0.0-rc.2 @vue/cli-service-global@5.0.0-rc.2
+      run: npm install -g @vue/cli@next @vue/cli-service-global@next
         
     - name: Install dependencies
       run: npm install
