--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       run: npm install
 
     - name: Build web
-      run: ng build --base-href /$BASE_HREF/ --deploy-url /$BASE_HREF/
+      run: npm run build
       env:
         BASE_HREF: ${{ github.event.repository.name }}
         
