--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build_gh": "vue-cli-service build && cp dist/index.html dist/404.html",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
