--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       run: npm install
 
     - name: Build web
-      run: npm run build
+      run: npm run build_gh
       env:
         BASE_HREF: /${{ github.event.repository.name }}/
         
