--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^0.24.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
+    "vue-axios": "^3.4.0",
+    "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-alpha.0",
+    "vuetify": "^3.0.0-alpha.12",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -41,7 +44,7 @@
     "tailwindcss": "^3.0.15",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vuetify-loader": "^2.0.0-alpha.9"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
