--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build_gh": "vue-cli-service build && cp dist/index.html dist/404.html",
+    "serve": "vue-cli-service serve --mode development",
+    "build": "vue-cli-service build --mode production",
+    "build_gh": "npm run build && cp dist/index.html dist/404.html",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@vue/cli-plugin-router": "~5.0.0-rc.2",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.2",
     "@vue/cli-service": "~5.0.0-rc.2",
+    "@vue/devtools": "^5.3.4",
     "@vue/eslint-config-typescript": "^9.1.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
