--- a/package.json
+++ b/package.json
@@ -10,42 +10,44 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@types/node": "^20.8.0",
     "axios": "^0.24.0",
-    "core-js": "^3.8.3",
-    "roboto-fontface": "*",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.4.0",
-    "vue-class-component": "^8.0.0-rc.1",
-    "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-alpha.12",
-    "vuex": "^4.0.2",
-    "webfontloader": "^1.0.0"
+    "core-js": "^3.33.0",
+    "roboto-fontface": "^0.10.0",
+    "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
+    "vue-class-component": "8.0.0-rc.1",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.19",
+    "vuex": "^4.1.0",
+    "webfontloader": "^1.6.28",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/webfontloader": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.2",
-    "@vue/cli-plugin-router": "~5.0.0-rc.2",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.2",
-    "@vue/cli-service": "~5.0.0-rc.2",
+    "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/devtools": "^5.3.4",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "lint-staged": "^11.1.2",
-    "postcss": "^8.4.5",
-    "prettier": "^2.4.1",
-    "sass": "^1.38.0",
-    "sass-loader": "^12.0.0",
-    "tailwindcss": "^3.0.15",
-    "typescript": "~4.1.5",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vuetify-loader": "^2.0.0-alpha.9"
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^8.7.1",
+    "lint-staged": "^11.2.6",
+    "postcss": "^8.4.31",
+    "prettier": "^2.8.8",
+    "sass": "^1.68.0",
+    "sass-loader": "^12.6.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "~4.1.6",
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vuetify-loader": "2.0.0-alpha.9"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
