--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,16 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-          node-version: '17.0.1'
+          node-version: '20.4.0'
 
-    - name: Install Agular
-      run: npm install -g @vue/cli@next @vue/cli-service-global@next
+    - name: Install Vue
+      run: pnpm i -g @vue/cli@next @vue/cli-service-global@next
         
     - name: Install dependencies
-      run: npm install
+      run: pnpm i
 
     - name: Build web
-      run: npm run build_gh
+      run: pnpm build_gh
       # env:
       #   BASE_HREF: /${{ github.event.repository.name }}/
         
