--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build --mode production",
-    "build_gh": "npm run build && cp dist/index.html dist/404.html",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "build_gh": "pnpm build && cp dist/index.html dist/404.html",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
     "roboto-fontface": "^0.10.0",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
-    "vue-class-component": "8.0.0-rc.1",
+    "vue-facing-decorator": "^3.0.3",
     "vue-router": "^4.2.5",
     "vuetify": "^3.3.19",
     "vuex": "^4.1.0",
@@ -27,6 +27,7 @@
     "@types/webfontloader": "^1.6.35",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
@@ -45,9 +46,11 @@
     "sass": "^1.68.0",
     "sass-loader": "^12.6.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "~4.1.6",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "2.0.0-alpha.9"
+    "typescript": "^5.0.0",
+    "unplugin-fonts": "^1.0.3",
+    "vite": "^4.2.0",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue-tsc": "^1.2.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
