--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
     - uses: actions/setup-node@v2
       with:
           node-version: '20.4.0'
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
         
     - name: Install dependencies
       run: pnpm i
