--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "build_gh": "pnpm build && cp dist/index.html dist/404.html",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
